finish header with adaptivity and add locale changer with nav menu

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,9 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "**/*.jsx",
+    "**/*.js"
   ],
   "exclude": [
     "node_modules"
