--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint . --ext .js,.jsx,"
   },
   "dependencies": {
+    "keen-slider": "^6.8.6",
     "motion": "^12.23.24",
     "next": "16.0.5",
     "next-intl": "^4.5.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-imask": "^7.6.1"
+    "react-imask": "^7.6.1",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
