--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.0.5",
     "next-intl": "^4.5.5",
     "react": "19.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-imask": "^7.6.1",
     "typewriter-effect": "^2.22.0"
