--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "motion": "^12.23.24",
     "next": "16.0.5",
     "next-intl": "^4.5.5",
+    "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
