--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "eslint . --ext .js,.jsx,"
   },
   "dependencies": {
+    "express": "^5.2.1",
     "keen-slider": "^6.8.6",
     "motion": "^12.23.24",
     "next": "^16.0.7",
